# XVK_Ray

./: .gitignore  CMakeLists.txt  README.md
3rd/: CMakeLists.txt
asset/model/classroom/: scene.gltf
asset/model/living_room/: scene.gltf
asset/model/sb2/: license.txt  scene.gltf
asset/model/sibenik/: license.txt  scene.gltf
asset/model/venus/: license.txt  scene.gltf
shader/: compile.bat  frag.spv
shader/HLSL/: compileHLSL.bat  material.hlsl  random.hlsl  raypayload.hlsl  rgen.hlsl  rgen.spv  rhit.hlsl  rhit.spv  rmiss.hlsl  rmiss.spv  rscatter.hlsl  sampling.hlsl  simpleRZ.frag.hlsl  simpleRZ.frag.spv  simpleRZ.vert.hlsl  simpleRZ.vert.spv  uniformBufferObject.hlsl  vertex.hlsl
src/: CMakeLists.txt  main.cpp  pathTracer.cpp  pathTracer.h
src/Asset/: Material.h  Model.cpp  Model.h  ResourceLoader.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  TextureImage.cpp  TextureImage.h  UniformBuffer.cpp  UniformBuffer.h  Vertex.h
src/Editor/: Camera.cpp  Camera.h  UI.cpp  UI.h  UserSettings.h
src/Utility/: BufferUtil.h
src/Vulkan/: ApplicationRZ.cpp  ApplicationRZ.h  VkBuffer.cpp  VkBuffer.h  VkCommon.cpp  VkCommon.h  VkDevice.cpp  VkDevice.h  VkInstance.cpp  VkInstance.h  VkWindow.cpp  VkWindow.h  XVKBuffer.cpp  XVKBuffer.h  XVKCommandBuffers.cpp  XVKCommandBuffers.h  XVKCommandPool.cpp  XVKCommandPool.h  XVKCommon.cpp  XVKCommon.h  XVKDepthBuffer.cpp  XVKDepthBuffer.h  XVKDescriptorPool.cpp  XVKDescriptorPool.h  XVKDescriptorSet.cpp  XVKDescriptorSet.h  XVKDescriptorSetLayout.cpp  XVKDescriptorSetLayout.h  XVKDescriptorSetManager.cpp  XVKDescriptorSetManager.h  XVKDevice.cpp  XVKDevice.h  XVKDeviceMemory.cpp  XVKDeviceMemory.h  XVKFence.cpp  XVKFence.h  XVKFrameBuffer.cpp  XVKFrameBuffer.h  XVKGraphicsPipeline.cpp  XVKGraphicsPipeline.h  (+21 more)
src/Vulkan/RayTracing/: ApplicationRT.cpp  ApplicationRT.h  ApplicationReSTIRGI.cpp  ApplicationReSTIRGI.h  ReSTIRGICommon.h  ReSTIRGIPipeline.cpp  ReSTIRGIPipeline.h  XVKAccelerationStructure.cpp  XVKAccelerationStructure.h  XVKBLAccelerationStructure.cpp  XVKBLAccelerationStructure.h  XVKBLGeometry.cpp  XVKBLGeometry.h  XVKRayFuncManager.cpp  XVKRayFuncManager.h  XVKRayTracingCore.cpp  XVKRayTracingCore.h  XVKRayTracingPipeline.cpp  XVKRayTracingPipeline.h  XVKShaderBindingManager.cpp  XVKShaderBindingManager.h  XVKTLAccelerationStructure.cpp  XVKTLAccelerationStructure.h
(+24 files in other folders)
